--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,8 @@ license = "MIT"
 keywords =  ["env", "file"]
 categories = ["parser-implementations"]
 
+[dependencies]
+snailquote = "0.1.0"
+
 [dev-dependencies]
 tempdir = "0.3.7"
