--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "envfile"
-version = "0.1.0"
-authors = ["Jeremy Soller <jackpot51@gmail.com>", "Michael Aaron Murphy <mmstickman@gmail.com>"]
+version = "0.2.0"
+authors = [
+	"Jeremy Soller <jackpot51@gmail.com>",
+	"Michael Aaron Murphy <mmstickman@gmail.com>",
+	"Nguyễn Hồng Quân <ng.hong.quan@gmail.com>"
+]
 description = "Buffer an environment file into an in-memory map, update the map, and write back to the file"
 repository = "https://github.com/pop-os/envfile"
 readme = "README.md"
