--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "envfile"
-version = "0.2.0"
+version = "0.2.1-alpha.0"
 authors = [
 	"Jeremy Soller <jackpot51@gmail.com>",
 	"Michael Aaron Murphy <mmstickman@gmail.com>",
