Update snailquote to 0.2.0
Using a git repo without pinning to a specific commit is dangerous, and
0.2.0 includes the necessary changes for building with rust 1.24.1

Note that tests were modified slightly because snailquote re-escapes
things with a preference for single quotes now.

The double quoted string now includes a ' character to force
double-quoting.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ keywords =  ["env", "file"]
 categories = ["parser-implementations"]
 
 [dependencies]
-snailquote = { git = "https://github.com/euank/snailquote" }
+snailquote = "0.2.0"
 
 [dev-dependencies]
 tempdir = "0.3.7"
